--- a/s2t.html
+++ b/s2t.html
@@ -8,15 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
     :root {
-        --primary-color: #b4c4db; /* Deep Blue */
-        --secondary-color: #a6d0ea; /* Soft Blue */
-        --accent-color: #E63946; /* Coral Red */
+        --primary-color: #b4c4db; 
+        --secondary-color: #a6d0ea;
+        --accent-color: #E63946; 
         --background-color: #F1FAEE; /* Light Mint */
         --card-background: #FFFFFF; /* White for cards */
         --text-primary: #e5e6e6; /* Dark Gray */
         --text-secondary: #4C5B61; /* Medium Gray */
         --error-color: #F76C5E; /* Bright Coral */
-        --success-color: #2A9D8F; /* Teal */
+        --success-color: #2A9D8F; 
         --border-radius: 12px;
         --transition-speed: 0.3s;
     }
